hw1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: architect-deployment
spec: 
  replicas: 2
  selector: 
    matchLabels:
      app: architect-app
  template: 
    metadata:
      labels: 
        app: architect-app
    spec: 
      containers: 
      - name: architect-backend
        image: allash/architect-backend:v2
        ports: 
        - name: web
          containerPort: 8000
        livenessProbe:
          httpGet:
            port: 8000
            path: /
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            port: 8000
            path: /health
          initialDelaySeconds: 10
          periodSeconds: 5
