hw1/service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: architect-service
spec: 
  selector: 
    app: architect-app
  ports: 
  - protocol: TCP
    port: 8000
    targetPort: web
  type: NodePort
